Fix article header alignment

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -303,7 +303,7 @@ blockquote p {
 .gh-head-menu {
     position: absolute;
     top: 32px;
-    left: calc(50% - 328px); 
+    left: calc(50% - 338px); 
     z-index: 999;
     display: flex;
     flex-direction: column;
@@ -517,8 +517,9 @@ blockquote p {
 }
 
 .article-title, .article-author {
-    max-width: 658px;
+    max-width: 720px;
     margin: auto;
+    padding: 0 20px;
 }
 
 .article-excerpt {
